--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-chartjs": "^5.3.3",
